# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-session-core — R311di proper entry (skeleton at R311di-1).
#
# Runtime-agnostic Session + SessionLinkActions + helper surface; the
# no_std + alloc home of the SCXML-driven session FSM tier currently
# spread across `wz-runtime-tokio::{session, session_glue, observer,
# declare, pubsub, query, reply, sample, locality, keyexpr_canon}`.
# This crate hosts the generic `impl<R: Runtime, T: TimeSource>` bodies
# so MCU profiles (`R = LwipRuntime<C>`, `T = LwipTime<C>`) compose
# the same session machinery without dragging in std / tokio / Lua.
#
# Phase W placement: §5.P runtime-services-tier consumer (wz-runtime-core
# trait surface) + §5.C link-tier consumer (BoxedLinkDriver). The Lua
# binding family (`install_session_actions` + `register_*` + `bind_unit`)
# stays in wz-runtime-tokio because the SCXML script engine is std/tokio-
# dependent and AP-only by spec. The `SessionLinkActions::new` concrete
# TokioRuntime-bound constructor also stays in wz-runtime-tokio for the
# same reason (AP-only entry point).
#
# R311di-1 lands the empty skeleton; subsequent sub-rounds (R311di-2 +
# beyond) move files in incrementally with import path rewrites and
# regression coverage at each step. The crate compiles unconditionally
# `no_std` with an opt-in `alloc` feature so MCU bare-metal profiles
# without a heap can still link the trait surface and the no-alloc
# subset of the session machinery.

[package]
name = "wz-session-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "R311di proper — runtime-agnostic Session / SessionLinkActions / helper surface (Phase W §5.P + §5.C consumer)."

[features]
default = ["alloc"]
# `alloc` brings `Box`/`Vec`/`String` into scope so the session machinery
# (HashMap-backed mapping tables, Vec-backed ext chains, owned codec
# byte buffers) can compose. R311di-2+ will gate the alloc-bound surface
# on this feature; the trait-only sub-surface stays available with
# default-off `alloc` for MCU profiles that prefer stack/static-only.
alloc = []

# R311di-11 — body-codec feature forwarders for the NetworkMessage
# dispatch cluster. Each forwards to wz-codecs/codec-* so the 3-stage
# chain (wz-runtime-tokio codec-X -> wz-session-core codec-X ->
# wz-codecs codec-X) keeps a single ground-truth gate per body codec.
# Implication shape mirrors wz-runtime-tokio: codec-push / codec-request
# / codec-response / codec-declare imply codec-frame (Frame envelope is
# the wire carrier for every Push/Request/Response/Declare record per
# parse_frame_payload's match arms). codec-response-final does NOT
# imply codec-frame: the parse_frame_payload N_MID_RESPONSE_FINAL arm
# is cfg(all(codec-frame, codec-response-final)), matching the R311e/g
# decision to keep the body codec independently selectable.
codec-frame = ["wz-codecs/codec-frame"]
codec-push = ["codec-frame", "wz-codecs/codec-push"]
codec-request = ["codec-frame", "wz-codecs/codec-request"]
codec-response = ["codec-frame", "wz-codecs/codec-response"]
codec-response-final = ["wz-codecs/codec-response-final"]
codec-declare = ["codec-frame", "wz-codecs/codec-declare"]

# R311du — pub/sub data-plane gates for the migrated SubscriberRegistry
# dispatch arms (Put / Del payload handling + attachment / timestamp ext
# extraction). Standalone (no wz-codecs forward — the gating is at the
# wz-session-core dispatch level, not the codec level); the
# wz-runtime-tokio side forwards its same-named features here so the
# gated production arms compile consistently across the workspace.
pubsub-put = []
pubsub-delete = []
pubsub-attachment = []
pubsub-timestamp = []
pubsub-source-info = []
pubsub-priority = []
pubsub-congestion-control = []
pubsub-express = []

# R311dx — query-side dispatch gates for the migrated QueryableRegistry
# (`wz-session-core::query`). `query-queryable` forwards to the
# codec-request (Request/Query dispatch) + codec-response (reply-build)
# halves, mirroring wz-runtime-tokio's same-named feature. The other
# three are standalone dispatch-arm gates with no wz-codecs forward
# (attachment ext extraction / selector-parameters projection / Err-form
# reply emit); the wz-runtime-tokio side forwards its same-named features
# here so the gated production arms compile consistently workspace-wide.
query-queryable = ["codec-request", "codec-response"]
query-attachment = []
query-selector-parameters = []
query-reply-err = []
# R311fm — the z_get consumer's reply-body decode plane. Gates the
# inbound `Response(Reply)` Put / Del body arms in `reply.rs`
# `dispatch_response` (the projection to `InboundReplyBody::Put` /
# `::Del`). Before R311fm those arms were gated ONLY on the pubsub
# publisher's `pubsub-put` / `pubsub-delete` markers — a reply consumer
# that pinned the named `zget-reply-only` subset (codec-response,
# codec-response-final, query-get, query-reply) type-checked but
# DECODED NO reply body, because the Put arm collapsed to `_ => return`
# without `pubsub-put`. Decoding a query reply must not require the
# unrelated pub/sub data plane (which also pulls `codec-push`); this
# feature is the query-side enabler so the getter plane is independently
# composable. Implies `codec-response` (the reply decoder it gates lives
# behind that codec). The Put / Del arms now gate on
# `any(pubsub-{put,delete}, query-reply)` so existing pub-bearing presets
# are unchanged and a pure getter composes standalone.
query-reply = ["codec-response"]

# R311dz — observer-domain gate-only features for the migrated
# `ApplicationLayerObserver` (`wz-session-core::observer`). Each gates
# one of the observer's per-domain registry fields (and the matching
# `dispatch_iteration_event` fan-out arm) so an arbitrary feature subset
# composes the observer with only the registries it actually wires. They
# are standalone (no wz-codecs forward — the underlying registries gate
# on `codec-declare` at the module level; these are the application-layer
# consumer gates one level up). The wz-runtime-tokio side forwards its
# same-named features here, mirroring the `query-queryable` forward, so
# the gated observer fields compile consistently across the workspace.
# R311ek — each implies `codec-declare`. With the observer no longer
# `codec-declare`-gated as a whole (so a pub/sub-only subset can compose
# it), each consumer field's registry type still lives under the
# `codec-declare`-gated `declare` module; making the consumer feature
# imply the codec mechanically guarantees the field type exists whenever
# the field (and its session-side access) is gated in. Semantically
# sound: an application cannot observe peer declarations without the
# declare codec.
declare-subscriber = ["codec-declare"]
declare-queryable = ["codec-declare"]
liveliness-token = ["codec-declare"]
liveliness-subscriber = ["codec-declare"]

# R311eg — transport-batching gate for the migrated PeerInitCaps decoder
# (`wz-session-core::peer_init_caps`). Standalone gate-only (no wz-codecs
# forward): off forces `from_init_syn` to clamp the peer-advertised
# batch_size to the full MTU (65535) instead of honoring it. The
# wz-runtime-tokio side forwards its same-named feature here so the INIT
# handshake batch-size negotiation semantics stay consistent workspace-wide.
transport-batching = []

[dependencies]
wz-runtime-core = { path = "../wz-runtime-core" }
# R311di-4 — wz-codecs needed by sample.rs for `wz_codecs::ext_entry`
# projection helpers (extract_qos / extract_attachment / extract_source_info).
# default-features = false + features = ["alloc"] mirrors wz-runtime-tokio's
# baseline so MCU profiles stay heap-aware but std-free.
wz-codecs = { path = "../wz-codecs", default-features = false, features = ["alloc"] }
# R311di-6 — sce-forge-runtime supplies `CodecError` needed by
# InboundParseError variants. default-features = false stays MCU-aware;
# `alloc` is implied via wz-codecs's transitive enable but the dep is
# declared direct so the import path `sce_forge_runtime::codec::CodecError`
# resolves without going through wz-codecs's namespace.
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust", default-features = false }
# R311di-13 — hashbrown for the resolve_wireexpr peer-keyexpr-table
# lookup (HashMap<u64, String>). default-features = false stays
# no_std-clean; the wz-runtime-tokio side already depends on hashbrown
# for the same reason (R311di-pre-a). R311dm — the `default-hasher`
# feature is enabled explicitly so a wz-session-core-only consumer
# (e.g. `cargo test -p wz-session-core --lib` MCU-style regression)
# resolves `HashMap<u64, String>::get` without leaning on the
# wz-runtime-tokio side enabling it transitively.
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
# R311du — log facade for the SubscriberRegistry keyexpr-resolution warn
# path (register_with_locality emits log::warn! when a registered keyexpr
# fails canonicalization). no_std-compatible facade; mirrors the
# wz-runtime-tokio log dep so the migrated production code resolves
# `log::warn!` without a new transitive assumption.
log = "0.4"
# R311ei — HMAC-SHA256 anti-amplification cookie primitive (the
# signing_key module). default-features = false keeps the RustCrypto
# stack no_std so the Accepting-side cookie path cross-compiles to the
# Layer G MCU targets (the OS-entropy constructor stays AP-only as a
# free fn in wz-runtime-tokio; getrandom is NOT pulled here). zeroize's
# `alloc` feature supplies the `Zeroizing<Vec<u8>>` key wrapper.
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
# R311ds — the four declare/* registries' wider behavioural tests
# (callback fan-out value capture, mixed-message dispatch) migrated
# here from the wz-runtime-tokio shells, joining the existing R311dm
# thin self-tests. They build the inbound Declare/Interest records via
# the shared fixture builders in the R71-pattern sibling crate; the
# path-dep boundary keeps zero test-only code in the production
# artifact regardless of workspace-level Cargo feature unification.
wz-session-core-test-support = { path = "../wz-session-core-test-support" }

[lints]
workspace = true
